fix: rounded border is not visible with overflow
add a padding because the overflow option is causing the code block to crop a bit

--- a/doc/_sphinx/theme/flames.css
+++ b/doc/_sphinx/theme/flames.css
@@ -594,6 +594,7 @@ div.document :is(h1, h2, h3, h4) > code {
  div[class^="highlight-"] {
   position: relative;
   overflow-x: auto;
+  padding: 2px;
 }
 
 pre {
